k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-panel
  labels:
    app: admin-panel
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: admin-panel
